src/objects/Sales_Code__c.object
<CustomObject>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Sales Codes</relationshipLabel>
        <relationshipName>Sales_Codes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Change_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Code</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>